fix word wrap

--- a/src/styles/_restaurant-detail.scss
+++ b/src/styles/_restaurant-detail.scss
@@ -95,6 +95,7 @@
         border-radius: 5px;
         box-shadow: 0 0 10px rgba(0,0,0,0.3);
         padding: 1em;
+        word-break: break-word;
       }
 
       &__name {
